Connected Database Successfully

--- a/mern-recipes-factory/backend/.env
+++ b/mern-recipes-factory/backend/.env
@@ -1,1 +1,1 @@
-ATLAS_URI=mongodb+srv://recipesadmin:<recipesadmin>@cluster.rukzf.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+ATLAS_URI=mongodb+srv://recipesadmin:recipesadmin@cluster.rukzf.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
