--- a/mern-recipes-factory/backend/.env
+++ b/mern-recipes-factory/backend/.env
@@ -1,3 +1,3 @@
 ATLAS_URI=mongodb+srv://recipesadmin:recipesadmin@cluster.rukzf.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
-JWTPRIVATEKEY=YOUR PRIVATE KEY
+JWTPRIVATEKEY=privatekey
 SALT=10
