--- a/mern-recipes-factory/package.json
+++ b/mern-recipes-factory/package.json
@@ -17,6 +17,7 @@
     "react-native": "^0.68.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "rsuite": "^5.9.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
