--- a/mern-recipes-factory/package.json
+++ b/mern-recipes-factory/package.json
@@ -8,11 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
+    "bootstrap": "^5.1.3",
     "express": "^4.17.3",
     "joi": "^17.6.0",
     "joi-password-complexity": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.3.1",
     "react-dom": "^18.0.0",
     "react-native": "^0.68.0",
     "react-router-dom": "^6.3.0",
