--- a/mern-recipes-factory/package.json
+++ b/mern-recipes-factory/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^8.5.1",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.1",
+    "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^18.0.0",
     "react-native": "^0.68.0",
     "react-router-dom": "^6.3.0",
